--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="asset/css/style.css">
 </head>
-<body>
+<body style="color: #fff;">
     <!-- navbar-start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
         <div class="container-fluid">
@@ -49,7 +49,7 @@
     <section id="team-members">
         <h2 class="fs-2 fw-bold">Meet the Team</h2>
         <div class="team-member">
-            <img src="asset/images/uzair.JPG" alt="Muhammad Uzair Zulfiqar" width="300px" height="400px" class="rounded">
+            <img src="asset/images/uzair.JPG" alt="Muhammad Uzair Zulfiqar" width="300px" height="400px" class="rounded img">
             <h3 class="mt-3 fw-bold">Muhammad Uzair Zulfiqar</h3>
             <p>Lead Developer</p>
             <p>Muhammad Uzair Zulfiqar is passionate about creating user-friendly weather apps and has a background in...</p>
@@ -85,14 +85,16 @@
         <p>If you have any questions, suggestions, or feedback, feel free to reach out to us at  <a href="mailto:uzairmian395@gmail.com" class="text-black text-decoration-none">uzairmian395@gmail.com</a>.</p>
     </section>
   </div>
+      <!-- About-Section-end -->
   
+      <!-- footer-start -->
     <div class="container-fluid bg-dark text-white mb-0 py-2">
       <footer class="mt-3">
           <p>&copy; 2023 Your Weather App. All rights reserved.</p>
       </footer>
       </div>
+      <!-- footer-end -->
    
-      <!-- About-Section-End -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="asset/js/script.js"></script>
 </body>
