--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="asset/css/style.css">
 </head>
-<body style="background-color: white;">
+<body style="color: #fff;">
     <!-- navbar-start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
         <div class="container-fluid">
@@ -33,13 +33,13 @@
       </nav>
     <!-- navbar-end -->
 
+      <!-- Main-Contact-Section-Start -->
     <div class="container mt-4">
         <h1 class="fw-bold">Contact Us</h1>
         <section id="introduction">
             <p>Have questions, suggestions, or feedback? We'd love to hear from you!</p>
         </section>
     </div>
- 
     
 <div class="container mt-4">
     <section id="contact-form">
@@ -86,12 +86,15 @@
         </div>
     </section>
     </div>
+      <!-- Main-Contact-Section-End -->
 
+    <!-- footer-start -->
     <div class="container-fluid bg-dark text-white mb-0 py-2">
     <footer class="mt-3">
         <p>&copy; 2023 Your Weather App. All rights reserved.</p>
     </footer>
     </div>
+        <!-- footer-end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="asset/js/script.js"></script>
 </body>
