--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-4 ">
               <li class="nav-item pe-5">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html" aria-label="Home">Home</a>
               </li>
               <li class="nav-item pe-5">
                 <a class="nav-link" href="about.html">About</a>
@@ -32,6 +32,8 @@
         </div>
       </nav>
     <!-- navbar-end -->
+
+    <!-- Main-Weather-Container-Start -->
     <div class="container">
       <div class="row">
         <div class="col-3 mt-5 pt-5">
@@ -39,31 +41,106 @@
           <button type="submit" onclick="setFunc()" id="btn" class="btn btn-primary mt-4 me-1">Submit</button>
         </div>
         <div class="col-9">
-          <div class="card  rounded w-75 m-auto mt-5 pb-4 mb-3 text-center " id="card"> 
+          <div class="card  rounded w-100 m-auto mt-5 pb-4 mb-3 text-center pt-3 " id="card"> 
             <!-- <img src="sun3.jpg" alt="" width="125px"  height="125px"> -->
-            <label for="" class="fs-1 fw-bold">City:</label>
-            <h2 id="city" class="fs-2"></h2>
-            <label for="" class="fs-1 fw-bold">Temprature:</label>
-            <h1 id="temp" class="fs-2"></h1>
-            <label for="" class="fs-1 fw-bold">Min / Max Temprature:</label>
-            <span id="min_max_temp" class=" fs-2"></span>
-            <label for="" class="fs-1 fw-bold">Weather:</label>
-            <h4 id="weather" class="fs-2"></h4>
-            <label for="" class="fs-1 fw-bold">Weather Description:</label>
-            <p id="weather_desc" class="fs-2"></p>
-            <label for="" class="fs-1 fw-bold">Wind Direction Speed:</label>
-            <span id="wind_dirc_speed" class=" fs-2"></span>
+            <label for="" class="fs-4 fw-bold">City:</label>
+           <h2 id="city" class="fs-5"></h2>
+            <label for="" class="fs-4 fw-bold">Temprature:</label>
+            <h1 id="temp" class="fs-5"></h1>
+            <label for="" class="fs-4 fw-bold">Min / Max Temprature:</label>
+            <span id="min_max_temp" class=" fs-5"></span>
+            <label for="" class="fs-4 fw-bold">Weather:</label>
+            <h4 id="weather" class="fs-5"></h4>
+            <label for="" class="fs-4 fw-bold">Weather Description:</label>
+            <p id="weather_desc" class="fs-5"></p>
+            <label for="" class="fs-4 fw-bold">Wind Direction Speed:</label>
+            <span id="wind_dirc_speed" class=" fs-5"></span>
         </div>
         </div>
       </div>
-   
-    </div>
 
+      <div class="row mb-3">
+        <div class="col box" id="forecast-day-1">
+          <label for="" class="fs-6 fw-bold">City:</label>
+         <h2 id="city" class="fs-5"></h2>
+          <label for="" class="fs-6 fw-bold">Temprature:</label>
+          <h1 id="temp" class="fs-5"></h1>
+          <label for="" class="fs-6 fw-bold">Min / Max Temprature:</label>
+          <span id="min_max_temp" class=" fs-5"></span>
+          <label for="" class="fs-6 fw-bold pt-2">Weather:</label>
+          <h4 id="weather" class="fs-5"></h4>
+          <label for="" class="fs-6 fw-bold">Weather Description:</label>
+          <p id="weather_desc" class="fs-5"></p>
+          <label for="" class="fs-6 fw-bold ">Wind Direction Speed:</label>
+          <span id="wind_dirc_speed" class=" fs-5"></span>
+        </div>
+        <div class="col box" id="forecast-day-2">
+          <label for="" class="fs-6 fw-bold">City:</label>
+          <h2 id="city" class="fs-5"></h2>
+           <label for="" class="fs-6 fw-bold">Temprature:</label>
+           <h1 id="temp" class="fs-5"></h1>
+           <label for="" class="fs-6 fw-bold">Min / Max Temprature:</label>
+           <span id="min_max_temp" class=" fs-5"></span>
+           <label for="" class="fs-6 fw-bold pt-2">Weather:</label>
+           <h4 id="weather" class="fs-5"></h4>
+           <label for="" class="fs-6 fw-bold">Weather Description:</label>
+           <p id="weather_desc" class="fs-5"></p>
+           <label for="" class="fs-6 fw-bold ">Wind Direction Speed:</label>
+           <span id="wind_dirc_speed" class=" fs-5"></span>
+        </div>
+        <div class="col box" id="forecast-day-3">
+          <label for="" class="fs-6 fw-bold">City:</label>
+          <h2 id="city" class="fs-5"></h2>
+           <label for="" class="fs-6 fw-bold">Temprature:</label>
+           <h1 id="temp" class="fs-5"></h1>
+           <label for="" class="fs-6 fw-bold">Min / Max Temprature:</label>
+           <span id="min_max_temp" class=" fs-5"></span>
+           <label for="" class="fs-6 fw-bold pt-2">Weather:</label>
+           <h4 id="weather" class="fs-5"></h4>
+           <label for="" class="fs-6 fw-bold">Weather Description:</label>
+           <p id="weather_desc" class="fs-5"></p>
+           <label for="" class="fs-6 fw-bold ">Wind Direction Speed:</label>
+           <span id="wind_dirc_speed" class=" fs-5"></span>
+        </div>
+        <div class="col box" id="forecast-day-4">
+          <label for="" class="fs-6 fw-bold">City:</label>
+          <h2 id="city" class="fs-5"></h2>
+           <label for="" class="fs-6 fw-bold">Temprature:</label>
+           <h1 id="temp" class="fs-5"></h1>
+           <label for="" class="fs-6 fw-bold">Min / Max Temprature:</label>
+           <span id="min_max_temp" class=" fs-5"></span>
+           <label for="" class="fs-6 fw-bold pt-2">Weather:</label>
+           <h4 id="weather" class="fs-5"></h4>
+           <label for="" class="fs-6 fw-bold">Weather Description:</label>
+           <p id="weather_desc" class="fs-5"></p>
+           <label for="" class="fs-6 fw-bold ">Wind Direction Speed:</label>
+           <span id="wind_dirc_speed" class=" fs-5"></span>
+        </div>
+        <div class="col box" id="forecast-day-5">
+           <label for="" class="fs-6 fw-bold">City:</label>
+         <h2 id="city" class="fs-5"></h2>
+          <label for="" class="fs-6 fw-bold">Temprature:</label>
+          <h1 id="temp" class="fs-5"></h1>
+          <label for="" class="fs-6 fw-bold">Min / Max Temprature:</label>
+          <span id="min_max_temp" class=" fs-5"></span>
+          <label for="" class="fs-6 fw-bold pt-2">Weather:</label>
+          <h4 id="weather" class="fs-5"></h4>
+          <label for="" class="fs-6 fw-bold">Weather Description:</label>
+          <p id="weather_desc" class="fs-5"></p>
+          <label for="" class="fs-6 fw-bold ">Wind Direction Speed:</label>
+          <span id="wind_dirc_speed" class=" fs-5"></span>
+        </div>
+      </div>
+    </div>
+    <!-- Main-Weather-Container-End -->
+  
+    <!-- footer-start -->
     <div class="container-fluid bg-dark text-white mb-0 py-2">
         <footer class="mt-3">
             <p>&copy; 2023 Your Weather App. All rights reserved.</p>
         </footer>
         </div>
+    <!-- footer-end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="asset/js/script.js"></script>
 </body>
